# libbayer

./: Cargo.toml
examples/: showbayer.rs  writebayer.rs
src/: bayer.rs  border_mirror.rs  border_replicate.rs  errcode.rs  ffi.rs  lib.rs  raster.rs
src/demosaic/: cubic.rs  linear.rs  mod.rs  nearestneighbour.rs  none.rs
