[package]
name = "bayer"
version = "0.1.5"
authors = ["David Wang <millimillenary@gmail.com>"]
homepage = "https://github.com/wangds/libbayer.git"
repository = "https://github.com/wangds/libbayer.git"
documentation = "https://docs.rs/bayer/"
description = "Algorithms for demosaicing Bayer images."
license = "MIT"
readme = "README.md"
keywords = ["bayer", "cfa", "demosaic"]
categories = ["multimedia::images"]

edition = "2021"

[lib]
name = "bayer"
crate-type = ["rlib", "dylib"]
test = true
doctest = true
doc = true

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
bench = []

[dependencies]
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
flic = "0.1"
sdl2 = { version = "0.30", features = ["image"] }

[badges]
travis-ci = { repository = "wangds/libbayer" }
